--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/MHSN
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+# Base upload directory(Reza)
+upload.base-dir=C:/Users/USER/OneDrive/Desktop/MHSN_FILES/
+# Base upload directory(Riyad)
+#upload.base-dir=
+# Base upload directory(In which laptop project will be shown)
+#upload.base-dir=
+
+
