--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.thymeleaf.suffix=.html
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 # Base upload directory(Reza)
-upload.base-dir=C:/Users/USER/OneDrive/Desktop/MHSN_FILES/
+#upload.base-dir=C:/Users/USER/OneDrive/Desktop/MHSN_FILES/
 # Base upload directory(Riyad)
-#upload.base-dir=
+upload.base-dir=C:/Users/h/Desktop/MHSN_FILES/
 # Base upload directory(In which laptop project will be shown)
 #upload.base-dir=
 
