--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/MHSN
 spring.datasource.username=root
+
+#DataBase Password
 #spring.datasource.password=root
 spring.datasource.password=
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
 #Base upload directory(Reza)
 upload.base-dir=C:/Users/USER/OneDrive/Desktop/MHSN_FILES/
 
