--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/MHSN
 spring.datasource.username=root
 
 #DataBase Password
-#spring.datasource.password=root
-spring.datasource.password=
+spring.datasource.password=root
+#spring.datasource.password=
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -11,10 +11,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 #Base upload directory(Reza)
-upload.base-dir=C:/Users/USER/OneDrive/Desktop/MHSN_FILES/
+#upload.base-dir=C:/Users/USER/OneDrive/Desktop/MHSN_FILES/
 
-# Base upload directory(Riyad)
-#upload.base-dir=C:/Users/h/Desktop/MHSN_FILES/
+ #Base upload directory(Riyad)
+ upload.base-dir=C:/Users/h/Desktop/MHSN_FILES/
 
 # Base upload directory(In which laptop project will be shown)
 #upload.base-dir=C:/Users/DELL/OneDrive/Desktop/MHSN_FILES/
