profile update done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.resources.static-locations=classpath:/static/
 #Base upload directory(Reza)
 upload.base-dir=C:/Users/USER/OneDrive/Desktop/MHSN_FILES/
 #Base upload directory(Riyad)
